Remove reference to eng/userdebug (#303)
Co-authored-by: sjp4 <sjp4@users.noreply.github.com>

--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -261,9 +261,9 @@ adb shell am broadcast --receiver-include-background \
 
 ## Development Mode (since Bort 4.2.0)
 
-On `eng` and `userdebug` Android builds, Bort can be placed into development
-mode. This can be useful for validating the Bort integration, or testing new
-Custom Metrics.
+On local development/test devices, Bort can be placed into development mode.
+This can be useful for validating the Bort integration, or testing new Custom
+Metrics.
 
 Once in development mode:
 
