MFLT-7153 Document the MAR files a little (#307)
Currently, we haven't had much mention about MAR files in our docs. This PR adds a few sections on how to upload MAR files and what they are.

I've also taken liberty to clean up a few things and split up the Uploading Bugreport and Uploading Symbol File sections because they weren't related enough to stay the same page.

--- a/docs/android/android-multi-device-support.mdx
+++ b/docs/android/android-multi-device-support.mdx
@@ -29,9 +29,11 @@ can be forwarded to Memfault's web services.
   <img width="1000" src="/binary-assets/android-client-server.svg" />
 </p>
 
-Data is bundled together in a MAR archive. This compressed file format collects
-several types of data (e.g. logs, metrics, bug reports) together, so that they
-can be uploaded in one file - resulting in fewer http requests.
+Data is bundled together in a
+[MAR archive](/docs/android/uploading-android-diagnostics#uploading-a-mar-file).
+This compressed file format collects several types of data (e.g. logs, metrics,
+bug reports) together, so that they can be uploaded in one file - resulting in
+fewer HTTP requests.
 
 ## Supported features
 
