--- a/docs/android/introduction.mdx
+++ b/docs/android/introduction.mdx
@@ -59,8 +59,8 @@ For a detailed integration guide, see the
 To symbolicate native and ANR traces, as well as deobfuscate android traces,
 Memfault provides a CLI tool that can be integrated into your build system to
 upload the required symbols and mappings, respectively. See
-[Uploading Android Bug Reports and Symbols](uploading-android-bugreports.mdx)
-for more information.
+[Uploading Symbol Files](uploading-android-symbol-files.mdx) for more
+information.
 
 The _Bort_ SDK contains
 [built-in support for collecting many Android system metrics](/docs/android/android-builtin-metrics).
