--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -96,7 +96,9 @@ Below is a list of the APIs and payloads that may be rate-limited:
       <td>Device</td>
       <td>Android</td>
       <td>
-        <Link to="/docs/android/uploading-android-bugreports">Bug Reports</Link>{" "}
+        <Link to="https://developer.android.com/studio/debug/bug-report">
+          Bug Reports
+        </Link>{" "}
         are Android-specific files.
       </td>
     </tr>
