--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -447,9 +447,18 @@ LC_ALL=c find . \( -type d -name .git -prune \) -o -type f -exec sed -i '' "s/ve
 ## Data Reporting Frequency
 
 There are two modes in which the Bort app can be configured to send data. The
-first is by bundling all data into a MAR (Memfault Archive file) file, or by
-sending each piece of data individually to Memfault as it's collected from the
-system.
+first is by bundling all data into a
+[MAR (Memfault Archive) file](/docs/android/uploading-android-diagnostics#uploading-a-mar-file),
+or by sending each piece of data individually to Memfault as it's collected from
+the system.
+
+:::note
+
+During development, you will want to increase the frequency at which data is
+sent. To do this, enable
+[development mode](/docs/android/android-getting-started-guide/#development-mode-since-bort-420)
+
+:::
 
 ### Uploading MAR files
 
@@ -473,4 +482,5 @@ This method of uploading files from the Bort SDK is deprecated as of Bort 4.1
 
 :::
 
-This configuration would upload individual files to Memfault.
+This configuration would upload individual files to Memfault within 15 After the
+data is collected from the system, it is uploaded up to 15 minutes later.
