Add docs for continuous logging mode (#310)

--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -105,7 +105,7 @@ Metrics are collected using the
 
 Logs are collected from
 [logcat](https://developer.android.com/studio/command-line/logcat) when issues
-occur.
+occur. See [Logging](android-logging).
 
 For a summary of _Caliper_'s features, see
 [Feature Release History](#feature-release-history).
